migrate io to nio